# shortTextAnswerDevelopment

./: .dockerignore  .gitignore  Dockerfile  README.md  config.json  pyproject.toml
.github/workflows/: deploy.yml
docs/: dev.md  user.md
evaluation_function/: dev.py  evaluation.py  evaluation_response.py  evaluation_response_utilities.py  evaluation_test.py  main.py  nlp_evaluation.py  nlp_evaluation_tests.py  preview_test.py  slm_evaluation.py  slm_evaluation_tests.py  slm_instructions.py  slm_rephraser.py
evaluation_function/nlp/: brown_length  word_freqs
scripts/: download_models.sh  download_nltk.sh
