[tool.poetry]
name = "evaluation_function"
version = "0.0.1"
description = "short answer questions Evaluation Function"
authors = ["neagualexa <ngu.alexandra@gmail.com>"]
readme = "README.md"
packages = [{ include = "evaluation_function" }]

[tool.poetry.scripts]
evaluation_function = "evaluation_function.main:main"
evaluation_function_dev = "evaluation_function.dev:dev"

[tool.poetry.dependencies]
python = "^3.11"
typing_extensions = "^4.12.2"
numpy = "^1.26.4"
nltk = "3.8.1"
gensim = "^4.3.3"
matplotlib = "^3.9.2"
certifi = "^2024.8.30"
requests = "^2.32.3"
urllib3 = "^2.2.3"
idna = "^3.10"
gpt4all = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
